# tabby

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  dist-workspace.toml  herdr-plugin.toml
.github/workflows/: check-herdr-manifests.yml  pr-issue-gate.yml  release.yml
.scratch/herdr-tab-auto-renamer/: PRD.md
.scratch/herdr-tab-auto-renamer/issues/: 01-scaffold-rust-plugin.md  02-herdr-client-and-fixtures.md  03-label-policy.md  04-stability-state-machine.md  05-persistent-manual-locks.md  06-daemon-integration.md  07-macos-manual-verification.md  08-research-plugin-state-path.md  09-default-plugin-state-path.md  (+1 more)
docs/: herdr-tab-title-research.md  install.md  plugin-session-loading-research.md  release-packaging-research.md  release.md
docs/adr/: 0001-persist-manual-rename-locks.md  0002-build-from-scratch.md  0003-use-rust.md  0004-local-link-first-distribution.md  0005-use-dist-and-homebrew-managed-plugin-link-for-release.md  0006-start-daemons-through-ensure-started.md  0007-rename-only-focused-tab.md  0008-prefer-event-triggered-label-refresh.md  0009-adopt-hybrid-session-refresher.md
docs/design/: architecture.md  open-decisions.md  plugin-session-loading-plan.md  risks.md  upstream-herdr-autostart-issue.md
docs/research/: current-hybrid-session-refresher-baseline.md  herdr-focus-session-event-contract.md
packaging/herdr/: herdr-plugin.toml
scripts/: check-herdr-manifests.py
src/: daemon.rs  herdr_client.rs  install.rs  labeler.rs  lib.rs  locks.rs  main.rs  paths.rs  stability.rs  startup.rs  status.rs
(+10 files in other folders)
