[package]
name = "tabby"
version = "0.1.5"
edition = "2024"
description = "Herdr plugin for automatic tab labels"
homepage = "https://github.com/yersonargotev/tabby"
repository = "https://github.com/yersonargotev/tabby"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
